# cc_start

./: .clang-format  .gitignore  ArrayName.cpp  ArrayReverse.cpp  BubbleSort.cpp  ConstPointer.cpp  ContactManagementSystem.cpp  CubeClass.cpp  FunctionOverloading.cpp  GuessNumber.cpp  MaxElement.cpp  MemoryPartition.md  NarcissisticNumber.cpp  New.cpp  README.md  StructArray.cpp  StructDefinition.cpp  StudentClass.cpp  TeachersStudents.cpp  TernaryOperator.cpp  TotalScores.cpp  abstract_class.cpp  algorithm_adjacent_find.cpp  algorithm_binary_search.cpp  algorithm_replace_if.cpp  algorithm_set_difference.cpp  algorithm_set_union.cpp  algorithm_shuffle_merge.cpp  algorithm_swap.cpp  brew_drinks.cpp  bubble_sort.cpp  build_in_functors.cpp  circle_class.cpp  class_template.cpp  class_template_function_argument.cpp  class_template_inheritance.cpp  computer_assembly.cpp  concretized_template_function.cpp  const_function_object_mutable.cpp  const_pointer.cpp  (+69 more)
ArrayReverse/: ArrayReverseB.cpp  array_reverse_a.cpp  array_reverse_b.cpp
PointCircleRelationship/: CMakeLists.txt  main.cpp
PointCircleRelationship/include/: Circle.h  PointCircleRelationship.h  Utilities.h  point_circle_relationship.h
PointCircleRelationship/src/: Circle.cpp  Point.cpp  Utilities.cpp
algorithm_count_if/: algorithm_count_if.cpp
algorithm_find/: CMakeLists.txt  algorithm_find.cpp  dogs.txt
algorithm_find_if/: CMakeLists.txt  algorithm_find_if.cpp  tvshows.txt
algorithm_replace/: CMakeLists.txt  algorithm_replace.cpp  algorithm_replace_config.h.in  tvshows.txt
algorithm_replace/tvshow/: CMakeLists.txt  tvshow.cpp  tvshow.h
algorithm_set_intersection/: CMakeLists.txt  algorithm_set_intersection.cpp  apps_a.txt  apps_b.txt  apps_c.txt
array_reverse/: array_reverse_a.cpp
binary_file/: binary_file.cpp
calculator_cc_start/: CMakeLists.txt
calculator_cc_start/include/: calculator.h  calculator_app.h  scientific_calculator.h
calculator_cc_start/src/: calculator.cpp  calculator_app.cpp  main.cpp  scientific_calculator.cpp
competition_process_system/: CMakeLists.txt
competition_process_system/include/: competition_process_system.h  player.h
competition_process_system/src/: competition_process_system.cpp  main.cpp  player.cpp
computer_room_reservation_system/: CMakeLists.txt  crr_system_config.h.in
computer_room_reservation_system/data/: administrators.txt  order.txt  students.txt  teachers.txt
computer_room_reservation_system/include/: administrator.h  computer_room.h  crr_system.h  identity.h  order.h  student.h  teacher.h
computer_room_reservation_system/src/: administrator.cpp  crr_system.cpp  identity.cpp  main.cpp  order.cpp  student.cpp  teacher.cpp
computer_room_reservation_system/utilities/: CMakeLists.txt  utilities.cpp  utilities.h
custom_array/: CMakeLists.txt
custom_array/data/: dogs.txt
custom_array/include/: card_box.hpp
custom_array/src/: main.cpp
employees_grouping/: CMakeLists.txt
employees_grouping/include/: department.h  employee.h
employees_grouping/src/: employee.cpp  main.cpp
find_algorithm/: CMakeLists.txt  find_algorithm.cpp  find_algorithm_config.h.in
point_circle_relationship/: CMakeLists.txt  main.cpp
point_circle_relationship/include/: point.h
point_circle_relationship/src/: point.cpp  utilities.cpp
staff_management_system/: CMakeLists.txt
staff_management_system/include/: staff.h  staff_list.h  staff_management_system.h
staff_management_system/src/: main.cpp  staff.cpp  staff_list.cpp  staff_management_system.cpp
starting_map/: starting_map.cpp
starting_vector/: dogs.txt  starting_vector.cpp
string_find_replace/: data.txt  string_find_replace.cpp
template_class_separate_files/: CMakeLists.txt
template_class_separate_files/include/: file.hpp
template_class_separate_files/src/: main.cpp
